k8s/frontend-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: "nginx" # specify the ingress class
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      rewrite ^(/lukkari/api/v1)(.*) /lukkariapi$2 last;
      rewrite ^(/lukkari/)((?!api).*) /lukkarifrontend/lukkari/$2 last;
      rewrite ^(/lukkari)$ /lukkarifrontend/lukkari last;
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /lukkariapi/(.*)
            pathType: Prefix
            backend:
              service:
                name: timetable-be-svc
                port:
                  number: 80
          - path: /lukkarifrontend/(.*)
            pathType: Prefix
            backend:
              service:
                name: timetable-fe-svc
                port:
                  number: 80
          - path: /((?!api).*)  #/(^(!api).*) #([^a]*)   # exclude api urls [^a*]
            pathType: Prefix
            backend:
              service:
                name: allocation-fe-svc
                port:
                  number: 80
          - path: /api/v1/?(.*)
            pathType: Prefix
            backend:
              service:
                name: allocation-be-svc
                port:
                  number: 80
